# platform-demo

./: Doxyfile  Makefile.am  configure.ac  doxygen-automake.am  libhello.pc.in  script-test1.sh
m4/: ChangeLog  ax_platform_detect.m4
po/: ChangeLog  Makevars  POTFILES.in  platform-demo.pot  zh_CN.po
src/: Makefile.am  demo.rc  gettext.h  hello.h  hello.rc  main.c  malloc.c  realloc.c
src/arm/: hello.c
src/linux/: hello.c
src/mac/: hello.c
src/win32/: hello.c
tests/: Makefile.am  script-test1.sh  test1.c
